--- a/tapango/.github/workflows/ci.yml
+++ b/tapango/.github/workflows/ci.yml
@@ -27,6 +27,8 @@ jobs:
           node-version: 20
       - name: Install dependencies
         run: npm ci
+      - name: Run Storybook guard checks
+        run: npm run ci:storybook:guard
       - name: Build Storybook
         run: npm run storybook:build
       - name: Upload static Storybook as artifact
