ci: refine Storybook guard JSX detection (ignore TS generics); add RNW shadow lint and finalized pre-commit

--- a/tapango/package.json
+++ b/tapango/package.json
@@ -17,7 +17,7 @@
     "build:ios": "eas build --platform ios",
     "submit": "eas submit",
     "test": "echo \"Tests are intentionally removed from this project\"",
-    "lint": "eslint \"src/**/*.{js,jsx,ts,tsx}\" --cache",
+    "lint": "eslint \"src/**/*.{js,jsx,ts,tsx}\" --cache && node scripts/lint-rnw-shadows.mjs",
     "lint:fix": "eslint \"src/**/*.{js,jsx,ts,tsx}\" --fix --cache",
     "typecheck": "tsc --noEmit",
     "format": "prettier --write .",
@@ -38,6 +38,7 @@
   },
   "dependencies": {
     "@clerk/clerk-expo": "^2.14.30",
+    "@expo/metro-runtime": "~6.1.2",
     "@expo/vector-icons": "^15.0.2",
     "@lottiefiles/dotlottie-react": "^0.16.1",
     "@react-native-async-storage/async-storage": "2.2.0",
@@ -50,7 +51,7 @@
     "@tamagui/lucide-icons": "^1.132.23",
     "@tamagui/toast": "^1.132.23",
     "@tanstack/react-query": "^5.56.2",
-    "expo": "^54.0.3",
+    "expo": "^54.0.6",
     "expo-application": "^7.0.7",
     "expo-auth-session": "~7.0.8",
     "expo-blur": "~15.0.7",
@@ -68,10 +69,10 @@
     "expo-location": "~19.0.7",
     "expo-notifications": "~0.32.11",
     "expo-print": "~15.0.7",
-    "expo-router": "~6.0.1",
+    "expo-router": "~6.0.3",
     "expo-secure-store": "~15.0.7",
     "expo-sharing": "~14.0.7",
-    "expo-splash-screen": "~31.0.9",
+    "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
     "expo-system-ui": "~6.0.7",
     "expo-web-browser": "~15.0.7",
@@ -94,7 +95,7 @@
   },
   "devDependencies": {
     "@axe-core/playwright": "^4.10.2",
-    "@babel/core": "7.25.2",
+    "@babel/core": "^7.28.4",
     "@playwright/test": "^1.55.0",
     "@react-native/eslint-config": "0.76.0",
     "@storybook/addon-essentials": "^8.3.0",
