--- a/tapango/.github/workflows/ci.yml
+++ b/tapango/.github/workflows/ci.yml
@@ -17,6 +17,17 @@ jobs:
       - run: npm ci
       - run: npm run test --silent
 
+  lint:
+    name: Lint (RNW shadows)
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 20
+      - run: npm ci
+      - run: npm run lint:ci
+
   storybook:
     name: Build Storybook
     runs-on: ubuntu-latest
