--- a/tapango/package.json
+++ b/tapango/package.json
@@ -18,6 +18,7 @@
     "submit": "eas submit",
     "test": "echo \"Tests are intentionally removed from this project\"",
     "lint": "eslint \"src/**/*.{js,jsx,ts,tsx}\" --cache && node scripts/lint-rnw-shadows.mjs",
+    "lint:ci": "node scripts/lint-rnw-shadows.mjs",
     "lint:fix": "eslint \"src/**/*.{js,jsx,ts,tsx}\" --fix --cache",
     "typecheck": "tsc --noEmit",
     "format": "prettier --write .",
@@ -121,13 +122,10 @@
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
-      "prettier --write",
-      "eslint --fix --cache --max-warnings=0",
-      "git add"
+      "prettier --write"
     ],
     "*.{json,md}": [
-      "prettier --write",
-      "git add"
+      "prettier --write"
     ]
   },
   "expo": {
