--- a/tapango/package.json
+++ b/tapango/package.json
@@ -112,6 +112,7 @@
     "eslint-plugin-jest": "^29.0.1",
     "eslint-plugin-react-hooks": "4.6.2",
     "eslint-plugin-react-native": "4.1.0",
+    "expo-build-properties": "^1.0.8",
     "husky": "9.1.6",
     "lint-staged": "15.2.10",
     "prettier": "3.3.3",
