--- a/tapango/tsconfig.json
+++ b/tapango/tsconfig.json
@@ -41,6 +41,10 @@
     "storybook/**/*",
     "tests",
     "tests/**/*",
+    "__tests__",
+    "__tests__/**/*",
+    "src/__tests__",
+    "src/__tests__/**/*",
     "test-results",
     "test-results/**/*",
     "supabase/functions",
