--- a/tapango/package.json
+++ b/tapango/package.json
@@ -15,6 +15,7 @@
     "build:ios": "eas build --platform ios",
     "submit": "eas submit",
     "test": "echo \"Tests are intentionally removed from this project\"",
+    "test:unit": "jest --passWithNoTests",
     "lint": "eslint \"src/**/*.{js,jsx,ts,tsx}\" --cache && node scripts/lint-rnw-shadows.mjs",
     "lint:ci": "node scripts/lint-rnw-shadows.mjs",
     "lint:fix": "eslint \"src/**/*.{js,jsx,ts,tsx}\" --fix --cache",
@@ -24,7 +25,6 @@
     "clean": "rimraf node_modules .expo",
     "reinstall": "npm ci",
     "prebuild": "expo prebuild",
-    "postinstall": "husky install",
     "db:apply": "supabase db push",
     "db:login": "supabase login",
     "db:version": "supabase --version",
@@ -33,7 +33,8 @@
     "storybook": "storybook dev -p 6006 -c storybook",
     "storybook:build": "storybook build -c storybook",
     "test:ui": "playwright test",
-    "test:ui:update": "playwright test --update-snapshots"
+    "test:ui:update": "playwright test --update-snapshots",
+    "prepare": "husky"
   },
   "dependencies": {
     "@clerk/clerk-expo": "^2.14.30",
@@ -91,7 +92,7 @@
     "react-native-svg": "15.12.1",
     "react-native-web": "^0.21.0",
     "react-native-worklets": "^0.5.1",
-    "sentry-expo": "^7.2.0",
+    "sentry-expo": "~7.0.0",
     "tamagui": "^1.132.23",
     "zod": "^3.23.8",
     "zustand": "^5.0.0"
@@ -104,6 +105,9 @@
     "@storybook/addon-essentials": "8.6.14",
     "@storybook/react-vite": "8.6.14",
     "@tamagui/babel-plugin": "1.132.23",
+    "@testing-library/jest-native": "^5.4.3",
+    "@testing-library/react-native": "^12.5.1",
+    "@types/jest": "^29.5.12",
     "@types/react": "19.1.10",
     "@typescript-eslint/eslint-plugin": "^7.1.1",
     "@typescript-eslint/parser": "^7.1.1",
@@ -114,8 +118,11 @@
     "eslint-plugin-react-native": "4.1.0",
     "expo-build-properties": "^1.0.8",
     "husky": "9.1.6",
+    "jest": "^29.7.0",
+    "jest-expo": "~54.0.11",
     "lint-staged": "15.2.10",
     "prettier": "3.3.3",
+    "react-test-renderer": "19.1.0",
     "rimraf": "5.0.5",
     "storybook": "8.6.14",
     "typescript": "5.9.2",
